flux/alertmanager/namespace.yaml
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/master/master/namespace-v1.json
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-metrics
  labels:
    app.kubernetes.io/managed-by: Kustomization
    app.kubernetes.io/name: prometheus
