flux/alertmanager/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: prometheus-metrics
  labels:
    alertmanager: metrics
spec:
  type: ClusterIP
  ports:
    - name: web
      port: 9093
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: alertmanager
    alertmanager: metrics
  sessionAffinity: ClientIP
  internalTrafficPolicy: Cluster
