flux/alertmanager/ingress.yaml
---
# yamllint disable-line rule:line-length
# yaml-language-server: $schema=https://github.com/yannh/kubernetes-json-schema/raw/master/master/ingress-networking-v1.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: prometheus-metrics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-production
  labels:
    prometheus: metrics
spec:
  ingressClassName: nginx-internal
  rules:
    - host: alerts.${cluster_domain}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
  tls:
    - hosts:
        - alerts.${cluster_domain}
      secretName: ingress-alertmanager-tls
